--- a/frontend/src/app/auth/pages/login/login.component.html
+++ b/frontend/src/app/auth/pages/login/login.component.html
@@ -1,15 +1,8 @@
 <section class="login">
   <div class="login__left">
-    <!-- <img
-      class="login__hero"
-      src="https://images.unsplash.com/photo-1552083940-86877723de7a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-      alt="Login"
-      loading="eager"
-    /> -->
-
     <img
       class="login__hero"
-      src="/assets/images/banners/kaiteki__auth.jpg"
+      src="https://images.unsplash.com/photo-1552083940-86877723de7a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
       alt="Login"
       loading="eager"
     />
@@ -29,27 +22,44 @@
       <p>Login your account</p>
     </div>
 
-    <form>
+    <form [formGroup]="form">
       <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input matInput type="email" placeholder="alice@example.com" />
+        <input
+          matInput
+          formControlName="email"
+          type="email"
+          placeholder="alice@example.com"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input matInput type="email" placeholder="Password" />
+        <input
+          matInput
+          formControlName="password"
+          type="password"
+          placeholder="Password"
+        />
       </mat-form-field>
 
       <a class="login__forgot">Forgot Password?</a>
 
-      <button mat-flat-button color="primary" class="login__button" (click)="onSubmit()">
+      <button
+        mat-flat-button
+        type="submit"
+        color="primary"
+        class="login__button"
+        [disabled]="form.invalid"
+        (click)="onSubmit()"
+      >
         Login
       </button>
     </form>
 
     <div class="login__bottom">
       <p>Don't have an account yet?</p>
-      <a routerLink="signup">Sign Up</a>
+      <a routerLink="/signup">Sign Up</a>
     </div>
 
     <button
