--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.html
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.html
@@ -4,7 +4,7 @@
   <div class="overview__left">
     <div class="overview__statistics">
       <div class="overview__tasks">
-        <div class="overview__tasks-item" [ngStyle]="{ background: '#cedcfb' }">
+        <!-- <div class="overview__tasks-item" [ngStyle]="{ background: '#cedcfb' }">
           <div class="overview__tasks-item-icon">
             <mat-icon>apps</mat-icon>
           </div>
@@ -35,6 +35,46 @@
         </div>
 
         <div class="overview__tasks-item" [ngStyle]="{ background: '#ffd1d7' }">
+          <div class="overview__tasks-item-icon">
+            <mat-icon>apps</mat-icon>
+          </div>
+          <div class="overview__tasks-item-body">
+            <p class="overview__tasks-item-title">Today's</p>
+            <p class="overview__tasks-item-number">4 Tasks</p>
+          </div>
+        </div> -->
+
+        <div class="overview__tasks-item">
+          <div class="overview__tasks-item-icon">
+            <mat-icon>apps</mat-icon>
+          </div>
+          <div class="overview__tasks-item-body">
+            <p class="overview__tasks-item-title">Total</p>
+            <p class="overview__tasks-item-number">12 Tasks</p>
+          </div>
+        </div>
+
+        <div class="overview__tasks-item">
+          <div class="overview__tasks-item-icon">
+            <mat-icon>task_alt</mat-icon>
+          </div>
+          <div class="overview__tasks-item-body">
+            <p class="overview__tasks-item-title">Completed</p>
+            <p class="overview__tasks-item-number">8 Tasks</p>
+          </div>
+        </div>
+
+        <div class="overview__tasks-item">
+          <div class="overview__tasks-item-icon">
+            <mat-icon>downloading</mat-icon>
+          </div>
+          <div class="overview__tasks-item-body">
+            <p class="overview__tasks-item-title">In progress</p>
+            <p class="overview__tasks-item-number">65 Tasks</p>
+          </div>
+        </div>
+
+        <div class="overview__tasks-item">
           <div class="overview__tasks-item-icon">
             <mat-icon>apps</mat-icon>
           </div>
