--- a/frontend/src/app/auth/pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/auth/pages/sign-up/sign-up.component.html
@@ -1,16 +1,9 @@
 <section class="signup">
   <div class="signup__left">
-    <!-- <img
+    <img
       class="signup__hero"
       src="https://images.unsplash.com/photo-1552083940-86877723de7a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
       alt="signup"
-      loading="eager"
-    /> -->
-
-    <img
-      class="login__hero"
-      src="/assets/images/banners/kaiteki__auth.jpg"
-      alt="Login"
       loading="eager"
     />
 
@@ -29,20 +22,30 @@
       <p>Create your account</p>
     </div>
 
-    <form>
+    <form [formGroup]="form">
       <mat-form-field appearance="outline">
         <mat-label>First Name</mat-label>
-        <input matInput type="text" placeholder="Alice" />
+        <input
+          matInput
+          formControlName="firstname"
+          type="text"
+          placeholder="Alice"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Last Name</mat-label>
-        <input matInput type="text" placeholder="Cullene" />
+        <input
+          matInput
+          formControlName="lastname"
+          type="text"
+          placeholder="Cullene"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Birth Date</mat-label>
-        <input matInput [matDatepicker]="picker" />
+        <input matInput formControlName="birthDate" [matDatepicker]="picker" />
         <mat-datepicker-toggle
           matIconSuffix
           [for]="picker"
@@ -52,27 +55,65 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input matInput type="email" placeholder="alice@example.com" />
+        <input
+          matInput
+          formControlName="email"
+          type="email"
+          placeholder="alice@example.com"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input matInput type="password" placeholder="Password" />
+        <input
+          matInput
+          formControlName="password"
+          type="password"
+          placeholder="Password"
+        />
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Confirm Password</mat-label>
-        <input matInput type="password" placeholder="Confirm Password" />
-      </mat-form-field>
+      <ul class="signup__validator" *ngIf="passwordFormField?.dirty">
+        <li
+          *ngFor="let matcher of passwordMatchers"
+          class="signup__validator-item"
+          [ngClass]="{
+            'signup__validator-success': passwordFormField?.value?.match(
+              matcher.pattern
+            )
+          }"
+        >
+          <mat-icon
+            class="signup__validator-icon success"
+            *ngIf="passwordFormField?.value?.match(matcher.pattern)"
+          >
+            check_circle
+          </mat-icon>
+          <mat-icon
+            class="signup__validator-icon error"
+            *ngIf="!passwordFormField?.value?.match(matcher.pattern)"
+          >
+            error_outline
+          </mat-icon>
+          {{ matcher.label }}
+        </li>
+      </ul>
 
-      <button mat-flat-button color="primary" class="signup__button">
+      <button
+        mat-flat-button
+        type="submit"
+        color="primary"
+        class="signup__button"
+        [disabled]="form.invalid"
+        (click)="onSubmit()"
+      >
         Signup
       </button>
     </form>
 
     <div class="signup__bottom">
       <p>Already have an account?</p>
-      <a>Login</a>
+      <a routerLink="/login">Login</a>
     </div>
 
     <button
