--- a/frontend/src/app/auth/pages/sign-up/sign-up.component.scss
+++ b/frontend/src/app/auth/pages/sign-up/sign-up.component.scss
@@ -115,4 +115,35 @@ mat-form-field {
       cursor: pointer;
     }
   }
+
+  &__validator {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 6px;
+
+    &-success {
+      color: green;
+    }
+
+    &-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    &-icon {
+      font-size: 20px;
+      width: 20px;
+      height: 20px;
+
+      &.success {
+        color: green;
+      }
+
+      &.error {
+        color: red;
+      }
+    }
+  }
 }
