--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.html
@@ -23,34 +23,26 @@
       </mat-menu>
     </div>
 
-    <button [matMenuTriggerFor]="profileDropdown">
-      <div class="avatar-wrapper">
-        <img
-          src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
-          alt="Avatar"
-          class="avatar-img"
-        />
-        <p class="avatar-label">Diar B.</p>
-      </div>
-    </button>
+    <ng-container *ngIf="user$ | async as user">
+      <button [matMenuTriggerFor]="profileDropdown">
+        <div class="avatar-wrapper">
+          <img
+            src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80"
+            alt="Avatar"
+            class="avatar-img"
+          />
+          <p class="avatar-label">
+            {{ user.firstname }} {{ user.lastname.charAt(0) }}.
+          </p>
+        </div>
+      </button>
 
-    <mat-menu #profileDropdown="matMenu" yPosition="below" class="rounded">
-      <div class="notification">
-        <ul class="notification-list">
-          <li class="notification-item">
-            <mat-icon class="notification-item-icon">person</mat-icon>
-            <p class="notification-item-label">Profile</p>
-          </li>
-          <li class="notification-item">
-            <mat-icon class="notification-item-icon">settings</mat-icon>
-            <p class="notification-item-label">Settings</p>
-          </li>
-          <li class="notification-item">
-            <mat-icon class="notification-item-icon">logout</mat-icon>
-            <p class="notification-item-label">Log Out</p>
-          </li>
-        </ul>
-      </div>
-    </mat-menu>
+      <mat-menu #profileDropdown="matMenu" yPosition="below">
+        <button mat-menu-item (click)="onLogout()">
+          <mat-icon>logout</mat-icon>
+          <p>Log Out</p>
+        </button>
+      </mat-menu>
+    </ng-container>
   </div>
 </div>
