--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.scss
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.scss
@@ -49,8 +49,9 @@
 
     &-item {
       border-radius: 6px;
-      background-color: #cbe0f1;
+      background: #c3d6f0;
       padding: 22px;
+      color: $text-black;
 
       &-icon {
         & mat-icon {
@@ -69,7 +70,7 @@
       }
 
       &-number {
-        color: #747272;
+        color: #5a5a5a;
       }
     }
   }
@@ -125,20 +126,20 @@
 
   &__messages {
     padding: 22px;
-    border: 1px solid #dad9d9;
+    background: #c3d6f0;
     border-radius: 6px;
 
     &-title {
       color: $text-black;
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 500;
     }
 
     &-list {
-      margin-top: 20px;
+      margin-top: 16px;
       display: flex;
       flex-direction: column;
-      gap: 14px;
+      gap: 8px;
     }
 
     &-item {
@@ -146,11 +147,9 @@
       display: flex;
       flex-direction: column;
       gap: 2px;
-
-      &:not(:first-child) {
-        border-top: 1px solid #e7e7e7;
-        padding-top: 12px;
-      }
+      padding: 8px 16px;
+      background: #e1ecfc;
+      border-radius: 6px;
 
       &-header {
         display: flex;
@@ -170,7 +169,7 @@
 
       &-date {
         font-size: 12px;
-        color: #888;
+        color: #6b6b6b;
       }
     }
   }
