--- a/frontend/src/app/auth/pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/auth/pages/sign-up/sign-up.component.html
@@ -116,6 +116,13 @@
       <a routerLink="/login">Login</a>
     </div>
 
+    <div class="signup__policy">
+      <p>
+        By clicking the button above, you agree to our
+        <a href="">Terms of Service</a> and <a href="">Privacy Policy</a>
+      </p>
+    </div>
+
     <button
       class="signup__back"
       routerLink="../"
