--- a/frontend/src/app/auth/pages/sign-up/sign-up.component.scss
+++ b/frontend/src/app/auth/pages/sign-up/sign-up.component.scss
@@ -10,6 +10,7 @@ mat-form-field {
 
   &__left {
     position: relative;
+    width: 100%;
     max-width: 800px;
     min-height: 100%;
     background: $primary-dark;
@@ -103,8 +104,7 @@ mat-form-field {
   }
 
   &__bottom {
-    color: #686666;
-    margin-top: 26px;
+    margin-top: 32px;
     display: flex;
     align-items: center;
     gap: 12px;
@@ -144,6 +144,18 @@ mat-form-field {
       &.error {
         color: red;
       }
+    }
+  }
+
+  &__policy {
+    color: #777676;
+    margin-top: 32px;
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
+
+    a {
+      text-decoration: underline;
     }
   }
 }
