Auth business process

--- a/frontend/src/app/notes/components/dialogs/create-note-dialog/create-note-dialog.component.html
+++ b/frontend/src/app/notes/components/dialogs/create-note-dialog/create-note-dialog.component.html
@@ -14,8 +14,8 @@
     mat-flat-button
     color="primary"
     [disabled]="form.invalid"
+    type="submit"
     (click)="onSubmitClick()"
-    cdkFocusInitial
   >
     Create
   </button>
