--- a/frontend/src/app/notes/pages/notes/notes.component.html
+++ b/frontend/src/app/notes/pages/notes/notes.component.html
@@ -11,6 +11,7 @@
         theme="snow"
         [modules]="quillConfig"
         class="quill__editor"
+        placeholder=""
       ></quill-editor>
     </form>
   </main>
