--- a/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-filter/tasks-filter.component.html
@@ -6,6 +6,12 @@
       </mat-expansion-panel-header>
       <form [formGroup]="form" class="filter__fields">
         <mat-form-field appearance="outline">
+          <mat-label>Search</mat-label>
+          <mat-icon matPrefix>search</mat-icon>
+          <input matInput type="text" formControlName="searchValue" />
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
           <mat-label>View</mat-label>
           <mat-select formControlName="view">
             <mat-option
@@ -21,34 +27,25 @@
         <mat-form-field appearance="outline">
           <mat-label>Executors</mat-label>
           <mat-select formControlName="executor">
-            <mat-option
-              *ngFor="let dexecutor of defaultExecutors"
-              [matTooltip]="dexecutor"
-              [value]="dexecutor"
+            <ng-container
+              *ngIf="currentTeamMember$ | async as currentTeamMember"
             >
-              {{ dexecutor }}
-            </mat-option>
-            <mat-divider></mat-divider>
-            <mat-option
-              *ngFor="let executor of executors"
-              [matTooltip]="executor"
-              [value]="executor"
-            >
-              {{ executor }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+              <mat-option matTooltip="My Tasks" [value]="currentTeamMember.id">
+                My Tasks
+              </mat-option>
+            </ng-container>
 
-        <mat-form-field appearance="outline">
-          <mat-label>Sorting</mat-label>
-          <mat-select formControlName="sort">
-            <mat-option
-              *ngFor="let sort of sortings"
-              [matTooltip]="sort"
-              [value]="sort"
-            >
-              {{ sort }}
-            </mat-option>
+            <mat-divider></mat-divider>
+
+            <ng-container *ngIf="executors$ | async as executors">
+              <mat-option
+                *ngFor="let executor of executors"
+                [matTooltip]="executor.fullName"
+                [value]="executor.id"
+              >
+                {{ executor.fullName }}
+              </mat-option>
+            </ng-container>
           </mat-select>
         </mat-form-field>
       </form>
