--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.html
@@ -26,11 +26,11 @@
         <p class="task__tags-body">{{ taskPriority }}</p>
       </div>
 
-      <ng-container *ngFor="let tag of task.tags">
+      <!-- <ng-container *ngFor="let tag of task.tags">
         <div class="task__tags-item">
           <p class="task__tags-body">{{ tag }}</p>
         </div>
-      </ng-container>
+      </ng-container> -->
     </div>
 
     <div class="task__dates">
