--- a/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/customize-dialog.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/dialogs/customize-dialog/customize-dialog.component.html
@@ -1,11 +1,12 @@
 <h4 class="sc__title" mat-dialog-title>Customize statuses</h4>
 
-<section class="sc" mat-dialog-content>
+<section class="sc" mat-dialog-content *ngIf="!invalid">
   <div class="sc__open">
     <h5>Open Status</h5>
 
     <app-customize-status-item
-      [item]="{ label: 'Open', color: '#000' }"
+      *ngIf="openStatus"
+      [status]="openStatus"
       [draggable]="false"
     ></app-customize-status-item>
   </div>
@@ -15,9 +16,12 @@
 
     <div cdkDropList class="sc__list" (cdkDropListDropped)="drop($event)">
       <app-customize-status-item
-        *ngFor="let movie of movies"
-        [item]="movie"
+        *ngFor="let status of statuses"
+        [status]="status"
         [draggable]="true"
+        (onDelete)="onDeleteStatus($event)"
+        (onChange)="onChangeStatus($event)"
+        [showMoreButton]="true"
       ></app-customize-status-item>
     </div>
   </div>
@@ -32,13 +36,14 @@
     <h5>Done Status</h5>
 
     <app-customize-status-item
-      [item]="{ label: 'Done', color: '#000' }"
+      *ngIf="doneStatus"
+      [status]="doneStatus"
       [draggable]="false"
     ></app-customize-status-item>
   </div>
 </section>
 
-<mat-dialog-actions align="end">
+<mat-dialog-actions align="end" *ngIf="!invalid">
   <button mat-stroked-button (click)="onBackClick()">Back</button>
   <button type="submit" mat-flat-button color="primary" (click)="onSubmit()">
     Save
