--- a/backend/src/main/resources/templates/email_verification.html
+++ b/backend/src/main/resources/templates/email_verification.html
@@ -32,7 +32,7 @@
       padding: 12px 36px;
       background-color: #1a82e2;
       border-radius: 6px;
-      color: #fff;
+      color: #fff !important;
       text-decoration: none;
       text-align: center;
     }
@@ -56,8 +56,6 @@
             <h1>Confirm Your Email Address</h1>
             <p>Tap the button below to confirm your email address. If you didn't create an account with KAITEKI, you can safely delete this email.</p>
             <a th:href="${url}" class="button">Verify</a>
-            <p>If that doesn't work, copy and paste the following link in your browser:</p>
-            <p th:text="${url}"></p>
         </div>
         <div class="footer">
             <p>KAITEKI</p>
