--- a/frontend/src/app/teams/submodules/tasks/components/views/table-view/table-view.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/table-view/table-view.component.html
@@ -12,29 +12,42 @@
       <td mat-cell *matCellDef="let element">{{ element.title }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="assignee">
-      <th mat-header-cell *matHeaderCellDef>Assignee</th>
-      <td mat-cell *matCellDef="let element">{{ element.executorName }}</td>
+    <ng-container matColumnDef="executor">
+      <th mat-header-cell *matHeaderCellDef>Executor</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.executorMember?.fullName ?? "Unassigned" }}
+      </td>
     </ng-container>
 
-    <ng-container matColumnDef="deadline">
+    <ng-container matColumnDef="startDate">
+      <th mat-header-cell *matHeaderCellDef>Start Date</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.startDate | date : "EEEE, MMMM d" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef>Due Date</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.endDate | date : "EEEE, MMMM d" }}
+        <ng-container *ngIf="element.endDate; else emptyEndDate">
+          {{ element.endDate | date : "EEEE, MMMM d" }}
+        </ng-container>
+
+        <ng-template #emptyEndDate>Unset</ng-template>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="priority">
       <th mat-header-cell *matHeaderCellDef>Priority</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.priority }}
+        {{ taskPriority(element) }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.status }}
+        {{ element.status.name }}
       </td>
     </ng-container>
 
