--- a/frontend/src/app/teams/submodules/tasks/pages/tasks-list/tasks-list.component.html
+++ b/frontend/src/app/teams/submodules/tasks/pages/tasks-list/tasks-list.component.html
@@ -1,5 +1,5 @@
 <section class="page">
-  <app-tasks-toolbar (onRefresh)="onRefresh()"></app-tasks-toolbar>
+  <app-tasks-toolbar></app-tasks-toolbar>
 
   <app-tasks-filter (onFilter)="onFilter($event)"></app-tasks-filter>
 
