--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-column/kanban-column.component.scss
@@ -4,12 +4,17 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  height: calc(100vh - 250px);
-
-  width: 100%;
-  width: 280px;
-
+  height: calc(100vh - 310px);
+  min-width: 300px;
   border-radius: 6px;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 12px;
+    overflow-y: auto;
+  }
 
   &__header {
     display: flex;
@@ -65,31 +70,4 @@
       }
     }
   }
-}
-
-.tasks-container {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  gap: 12px;
-  overflow-y: auto;
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
