--- a/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.scss
+++ b/frontend/src/app/teams/submodules/tasks/components/views/kanban-board/components/kanban-item/kanban-item.component.scss
@@ -6,6 +6,15 @@
   background: #ffffff;
   border: 1px solid #e9e9e9;
 
+  &__placeholder {
+    background: #fafafa;
+    border: dotted 3px #e4e3e3;
+    border-radius: 6px;
+    min-height: 200px;
+    width: 100%;
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
   &__header {
     padding: 0 16px;
     display: flex;
@@ -16,14 +25,6 @@
     &-title {
       font-size: 16px;
       font-weight: 500;
-    }
-
-    &-more {
-      & mat-icon {
-        font-size: 22px;
-        width: 22px;
-        height: 22px;
-      }
     }
   }
 
@@ -123,21 +124,12 @@
 
 .cdk-drag-preview {
   padding: 12px 0px;
-  border-radius: 10px;
   background: #ffffff;
   border: 1px solid #e9e9e9;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
 .cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
