--- a/frontend/src/app/teams/submodules/tasks/components/views/table-view/table-view.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/views/table-view/table-view.component.html
@@ -54,19 +54,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
-        <button
-          (click)="onTaskMoreClick($event)"
-          [matMenuTriggerFor]="taskMoreMenu"
-        >
-          <mat-icon>more_horizont</mat-icon>
-        </button>
-
-        <mat-menu #taskMoreMenu="matMenu">
-          <button mat-menu-item [routerLink]="[element.id]">View</button>
-          <button mat-menu-item [routerLink]="[element.id, 'edit']">
-            Edit
-          </button>
-        </mat-menu>
+        <app-task-more-menu [task]="element"></app-task-more-menu>
       </td>
     </ng-container>
 
